Zendeskお問い合わせフォームリンクの追加

--- a/app/views/static_pages/help.html.slim
+++ b/app/views/static_pages/help.html.slim
@@ -15,10 +15,10 @@ h2 サポート連絡先
 p
   | ※ 不具合情報や機能要望など、情報を求めておりますので、是非お気軽にお問い合わせください！
   br
-  | ※ サポート体制整備中に付き、電話に出れないタイミングもあるため、なるべくメールでのお問い合わせをお願いいたします。お急ぎの際はお電話でも問題ありません。
+  | ※ サポート体制整備中に付き、電話に出れないタイミングもあるため、こちらよりお問い合わせをお願いいたします。お急ぎの際はお電話でも問題ありません。
 
 ul
   li 株式会社mofmof
   li 西井
   li 080-1397-5845
-  li= link_to 'support@mof-mof.co.jp', 'mailto:support@mof-mof.co.jp', data: { event_name: 'Open mailer with support email' }
+= link_to 'お問い合わせはこちらから', 'https://mofmof.zendesk.com/hc/ja/requests/new', class: 'btn btn-primary'
