zendeskのお問い合わせリンクボタン名の変更

--- a/app/views/static_pages/help.html.slim
+++ b/app/views/static_pages/help.html.slim
@@ -21,4 +21,4 @@ ul
   li 株式会社mofmof
   li 西井
   li 080-1397-5845
-= link_to 'お問い合わせはこちらから', 'https://mofmof.zendesk.com/hc/ja/requests/new', class: 'btn btn-primary'
+= link_to 'メールお問い合わせはこちらから', 'https://mofmof.zendesk.com/hc/ja/requests/new', class: 'btn btn-primary'
