Assign window.currentBot js variable if exists

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <%= render 'layouts/shared/js_vars/current_user' %>
   <% end %>
   <%= render 'layouts/shared/js_vars/images' %>
+  <%= render 'layouts/shared/js_vars/current_bot' %>
 </head>
 <body>
   <% if Rails.env.production? %>
