Change button id in sentence synonym form, it is for fix conflict with mixpanel

--- a/app/views/imported_sentence_synonyms/new.html.slim
+++ b/app/views/imported_sentence_synonyms/new.html.slim
@@ -8,7 +8,7 @@
   .panel-body
     .pull-right
       | 累計登録数: #{current_user.sentence_synonyms.count}件
-    = bootstrap_form_for @question_answer, url: form_url, method: :post do |f|
+    = bootstrap_form_for @question_answer, url: form_url, method: :post, data: { event_name: 'Create sentence synonym', bot_id: @bot.try(:id), bot_name: @bot.try(:name), question_answer_id: @question_answer.id } do |f|
       = f.hidden_field :id
       = f.static_control :question
 
@@ -17,9 +17,9 @@
       = f.fields_for :sentence_synonyms, @question_answer.sentence_synonyms.select{|ss| ss.new_record?} do |ss|
         = ss.text_field :body, hide_label: true
 
-      = f.submit '登録する', class: 'btn btn-success', id: 'submit'
+      = f.submit '登録する', class: 'btn btn-success', id: 'submit-button'
       | &nbsp;
-      = link_to 'スキップする', skip_url, class: 'btn btn-default', id: 'cancel', data: { event_name: 'Skip creating sentence synonym', bot_id: @bot.try(:id), bot_name: @bot.try(:name) }
+      = link_to 'スキップする', skip_url, class: 'btn btn-default', id: 'cancel-button', data: { event_name: 'Skip creating sentence synonym', bot_id: @bot.try(:id), bot_name: @bot.try(:name) }
 
 .well
   h4 同義文の注意点（必ずお読みください）
