Receive isManager prop and pass to ChatSection component

--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -1,6 +1,7 @@
 span(
   data-component="ChatApp"
   data-token=@bot.token
+  data-is-manager=(current_user.normal? || current_user.staff?).to_json
 )
 
 /.chat-container.chat-area
