--- a/app/views/question_answers/index.html.slim
+++ b/app/views/question_answers/index.html.slim
@@ -4,6 +4,7 @@ h1 Q&A管理
 table.table.table-striped
   thead
     tr
+      th トピック
       th 質問
       th 回答
       th 分岐
@@ -11,13 +12,13 @@ table.table.table-striped
   tbody
     - @question_answers.each do |question_answer|
       tr
+        - question_answer.topic_tags.each do |tag|
+          td = tag.name 
         td = simple_format question_answer.question
         td = simple_format question_answer&.answer&.body
-        td
           ul
             - question_answer.decision_branches.each do |decision_branch|
               li = decision_branch.body
-
         td nowrap="nowrap"
           = link_to t('helpers.link.edit'), edit_bot_question_answer_path(@bot, question_answer), class: "btn btn-default", data: { event_name: 'Open edit question answer', bot_id: @bot.id, bot_name: @bot.name }
           = link_to t('helpers.link.destroy'), bot_question_answer_path(@bot, question_answer), data: { confirm: 'Q&Aを削除します。よろしいですか。', method: :delete, event_name: 'Delete question answer', bot_id: @bot.id, bot_name: @bot.name }, class: "btn btn-danger"
