Add .btn-default style of inside .chat-app

--- a/app/assets/stylesheets/modules/chat/btn.scss
+++ b/app/assets/stylesheets/modules/chat/btn.scss
@@ -1,4 +1,9 @@
 .chat-area {
+  .btn-default {
+    background-image: none;
+    background-color: $white;
+  }
+
   .btn-primary {
     background: {
       color: $blue;
