--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -2,10 +2,12 @@
 
 <div>
   <ul class="nav nav-pills">
-    <li role="presentation" class="<%= 'active' if params[:filter].blank? && params[:good].blank? && params[:bad].blank? %>"><%= link_to '全て', bot_threads_path(@bot), data: { event_name: 'Open all threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
-    <li role="presentation" class="<%= 'active' if params[:filter].present? %>"><%= link_to '回答失敗のみ', bot_threads_path(@bot, filter: 1), data: { event_name: 'Open failed threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
+    <li role="presentation" class="<%= 'active' if params[:filter].blank? && params[:good].blank? && params[:bad].blank? && params[:answer_marked].blank? %>">
+      <%= link_to '全て', bot_threads_path(@bot), data: { event_name: 'Open all threads', bot_id: @bot.id, bot_name: @bot.name } %>
+    </li>
     <li role="presentation" class="<%= 'active' if params[:good].present? %>"><%= link_to 'Goodがある対話', bot_threads_path(@bot, good: 1), data: { event_name: 'Open good threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
     <li role="presentation" class="<%= 'active' if params[:bad].present? %>"><%= link_to 'Badがある対話', bot_threads_path(@bot, bad: 1), data: { event_name: 'Open bad threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
+    <li role="presentation" class="<%= 'active' if params[:answer_marked].present? %>"><%= link_to '注意回答がある対話', bot_threads_path(@bot, answer_marked: 1), data: { event_name: 'Open marked threads', bot_id: @bot.id, bot_name: @bot.name } %></li>
     <li style="float: right">
       <%= link_to '対話履歴をエクスポート', bot_threads_path(format: :csv), class: 'btn btn-default' %>
     </li>
