--- a/app/views/topic_tags/_form.html.slim
+++ b/app/views/topic_tags/_form.html.slim
@@ -2,7 +2,7 @@
   .col-md-6.col-xs-12
     = bootstrap_form_for [@bot, @topic_tag] do |f|
 
-      = f.text_field :name
+      = f.text_field :name, hide_label: true
 
       .actions
         = f.submit class: 'btn btn-primary'
