--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -20,7 +20,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th></th>
+      <th width="72px"></th>
       <th>セット数</th>
       <th>本文</th>
       <th nowrap="nowrap">最終発言日時</th>
