--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,33 +27,7 @@
     <%= render 'layouts/shared/ui/header' %>
   <% end %>
 
-  <% if !chat_page? && policy(:static_pages).can_use_nav?(@bot) %>
-    <div id="sidebar-wrapper" class="col-sm-2 col-xs-12">
-      <div class="sidebar-nav list-group">
-        <%= link_to edit_bot_path(@bot), class: 'bot-profile list-group-item text-center' do %>
-          <p><%= @bot.name %></p>
-          <% if @bot.image %>
-            <%= image_tag @bot.image_url(:thumb) %>
-          <% end %>
-
-          <div id="bot-status-label">
-            <%= render 'shared/learning_status_label', bot: @bot %>
-          </div>
-        <% end %>
-        <%= link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank', data: { event_name: 'Open new chat', bot_id: @bot.id, bot_name: @bot.name } %>
-        <%= link_to "育てる", new_bot_training_path(@bot), class: 'list-group-item', data: { event_name: 'Open training', bot_id: @bot.id, bot_name: @bot.name } %>
-        <%= link_to "学習データをエクスポート", bot_exports_path(@bot), class: 'list-group-item', data: { event_name: 'Open exporing', bot_id: @bot.id, bot_name: @bot.name } %>
-        <%= link_to "学習データをインポート", new_bot_imports_path(@bot), class: 'list-group-item', data: { event_name: 'Open importing', bot_id: @bot.id, bot_name: @bot.name } %>
-        <%= link_to "対話履歴", bot_threads_path(@bot), class: 'list-group-item', data: { event_name: 'Open threads', bot_id: @bot.id, bot_name: @bot.name } %>
-        <%= link_to "Q&A管理", bot_question_answers_path(@bot), class: 'list-group-item', data: { event_name: 'Open qestion answers', bot_id: @bot.id, bot_name: @bot.name } %>
-        <%= link_to "Q&Aトピックタグ", bot_topic_tags_path(@bot), class: 'list-group-item', data: { event_name: 'Open topic tags', bot_id: @bot.id, bot_name: @bot.name } %>
-        <%= link_to "回答", bot_answers_path(@bot), class: 'list-group-item' %>
-        <%= link_to "会話ツリー", bot_conversation_tree_path(@bot), class: 'list-group-item', data: { event_name: 'Open conversation tree', bot_id: @bot.id, bot_name: @bot.name } %>
-      </div>
-      <%= link_to "学習を実行する", bot_learning_path(@bot), class: 'btn btn-danger btn-block', data: { remote: true, method: :patch, event_name: 'Run learning', bot_id: @bot.id, bot_name: @bot.name } %>
-    </div>
-    <% container_main_class = 'col-sm-10 col-sm-offset-2 ' %>
-  <% end %>
+  <%= render 'layouts/shared/ui/side_nav' %>
 
   <% if chat_page? %>
     <%= yield %>
