Modify root container div’s class name to helper method

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
   <% if chat_page? %>
     <%= yield %>
   <% else %>
-    <div class="container container-main <%= container_main_class %>">
+    <div class="<%= root_container_class %>">
       <%= render "shared/flash" %>
       <%= yield %>
     </div>
