Make button style in .chat-header

--- a/app/assets/stylesheets/modules/chat/btn.scss
+++ b/app/assets/stylesheets/modules/chat/btn.scss
@@ -1,7 +1,9 @@
-.chat-area {
+.chat-area,
+.chat-header {
   .btn-default {
     background-image: none;
     background-color: $white;
+    text-shadow: none;
   }
 
   .btn-primary {
