--- a/app/views/question_answers/_form.html.slim
+++ b/app/views/question_answers/_form.html.slim
@@ -4,4 +4,5 @@ span(
   data-component="QuestionAnswerForm"
   data-bot-id=@bot.id
   data-id=@question_answer.id
+  data-question-body=@question_answer.question
 )
