--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -1,21 +1,18 @@
-span(
-  data-component="ChatApp"
-  data-token=@bot.token
-  data-is-manager=(current_user.present? && (current_user.normal? || current_user.staff?)).to_json
-)
+header.chat-header
+  h1.chat-header__title= @bot.name
 
-/.chat-container.chat-area
+.chat-container.chat-area
   - @chat.messages.each_with_index do |message, i|
     - if message.bot?
       = render 'bot', message: message, is_first_message: i.zero?, token: params[:token], message_id: message.id
     - elsif message.guest?
       = render 'guest', message: message
 
-/.chat-form: .container: .chat-container--no-padding
+.chat-form: .container: .chat-container--no-padding
   = form_for @chat.messages.build, url: chats_messages_path(@bot.token), data: { remote: true, event_name: 'Create chat message', bot_id: @bot.id, bot_name: @bot.name, chat_id: @chat.id } do |f|
     = f.text_field :body, placeholder: '質問を入れてください', hide_label: true, class: 'chat-form__text-field'
     = f.button class: 'chat-form__submit', id: 'chat-submit' do
       span.visible-sm.visible-md.visible-lg 質問
       span.visible-xs: i.fa.fa-icon.fa-paper-plane-o
 
-/= javascript_include_tag 'chats'
+= javascript_include_tag 'chats'
