Modify to editable topic_taggings in QuestionAnswer form

--- a/app/views/question_answers/_form.html.slim
+++ b/app/views/question_answers/_form.html.slim
@@ -4,4 +4,5 @@ span(
   data-component="QuestionAnswerForm"
   data-bot-id=@bot.id
   data-id=@question_answer.id
+  data-topic-tags=@bot.topic_tags.pluck(:id, :name)
 )
