--- a/app/views/question_answers/index.html.slim
+++ b/app/views/question_answers/index.html.slim
@@ -3,7 +3,12 @@ h1 Q&A管理
   .pull-left
     = form_tag bot_question_answers_path(@bot), method: :get, class: 'form-inline' do
       = collection_select :topic, :id, @topic_tags.all, :id, :name, { prompt: "トピックを選択してください", selected: @search_result }, class: 'form-control'
+      = space
       = submit_tag '検索', name: "search", class: "btn btn-default"
+      - if params.dig(:topic, :id).present?
+        = space
+        = link_to '✕ トピックタグ検索を解除', bot_question_answers_path(@bot), class: 'btn btn-link'
+
   .pull-right
     = link_to t('helpers.link.new'), new_bot_question_answer_path(@bot), class: "btn btn-default", data: { event_name: 'Open new question answer', bot_id: @bot.id, bot_name: @bot.name }
 table.table.table-striped
