対話履歴の空のthに「フラグ」を追加

--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -27,7 +27,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th width="72px"></th>
+      <th width="72px">フラグ</th>
       <th>セット数</th>
       <th>本文</th>
       <th nowrap="nowrap">最終発言日時</th>
