インポート・エクスポートの画面にファイル形式がCSVであることを記入

--- a/app/views/imports/_form.html.erb
+++ b/app/views/imports/_form.html.erb
@@ -11,6 +11,7 @@
   <div class="actions">
     <%= f.submit 'Shift_JISでインポート', class: 'btn btn-success' %>
     <%= f.submit 'UTF-8でインポート', class: 'btn btn-success' %>
+    <p class="help-block">※ファイルはCSV形式でインポートして下さい</p>
     <p class="help-block">※Excelで作成したCSVのエンコードはShift_JISです</p>
   </div>
 <% end %>
