--- a/app/views/exports/index.html.slim
+++ b/app/views/exports/index.html.slim
@@ -8,4 +8,5 @@
       = space
       = link_to 'UTF-8でエクスポート', bot_export_path(@bot, :utf8), class: 'btn btn-default', data: { event_name: 'Export learninig data as UTF-8', bot_id: @bot.id, bot_name: @bot.name }
 
+    p.help-block ※ファイルはCSV形式でエクスポートされます
     p.help-block ※Excelで開きたい場合はShift_JISでエクスポートしてください
