--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%#= stylesheet_link_tag    'lumen', media: 'all' %>
   <%= stylesheet_link_tag    'cerulean', media: 'all' %>
+  <%= stylesheet_link_tag    'sign_in' %>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
