--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
 
 @import "compass/utilities/general/clearfix";
 @import "common/variables";
+@import "common/keyframes";
 @import "helpers/**/*";
 @import "modules/**/*";
 
