--- a/app/assets/stylesheets/modules/btn.scss
+++ b/app/assets/stylesheets/modules/btn.scss
@@ -1,9 +1,16 @@
 .btn {
+  cursor: pointer;
+
   &.btn-xs-sm {
     @media (max-width: $screen-xs-max) {
       padding: 5px 10px;
       font-size: 12px;
       line-height: 1.5;
     }
+  }
+
+  &-learning {
+    color: #fff !important;
+    border-radius: 0 !important;
   }
 }
