--- a/app/views/layouts/shared/ui/_side_nav.html.slim
+++ b/app/views/layouts/shared/ui/_side_nav.html.slim
@@ -6,8 +6,12 @@
         - if @bot.image
           = image_tag @bot.image_url(:thumb)
 
-        #bot-status-label
-          = render 'shared/learning_status_label', bot: @bot
+      #bot-status-label
+        span(
+          data-component="LearningButton"
+          data-bot-id=@bot.id
+        )
+
       = link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank', data: { event_name: 'Open new chat', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "対話履歴", bot_threads_path(@bot), class: 'list-group-item', data: { event_name: 'Open threads', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "育てる", new_bot_training_path(@bot), class: 'list-group-item', data: { event_name: 'Open training', bot_id: @bot.id, bot_name: @bot.name }
@@ -17,4 +21,3 @@
       = link_to "トピックタグ", bot_topic_tags_path(@bot), class: 'list-group-item', data: { event_name: 'Open topic tags', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "回答", bot_answers_path(@bot), class: 'list-group-item', data: { event_name: 'Open answers', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "会話ツリー", bot_conversation_tree_path(@bot), class: 'list-group-item', data: { event_name: 'Open conversation tree', bot_id: @bot.id, bot_name: @bot.name }
-    = link_to "学習を実行する", bot_learning_path(@bot), class: 'btn btn-danger btn-block', data: { remote: true, method: :patch, event_name: 'Run learning', bot_id: @bot.id, bot_name: @bot.name }
