Add introduce new chat video

--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -4,3 +4,17 @@ span(
   data-is-manager=(current_user.present? && (current_user.normal? || current_user.staff?)).to_json
   data-flash-message=flash[:warning]
 )
+
+/ TODO 2017-05-19 を過ぎたら削除する
+- if user_signed_in? && Time.current < Time.zone.parse('2017-05-19 23:59:59')
+  .modal-backdrop.fade.in
+  .modal.fade.in tabindex="-1" style="display:block;" data-role="notification-modal"
+    .modal-dialog
+      .modal-content
+        .modal-header
+          button.close type="button"
+            span aria-hidden="true"  &times;
+          h4.modal-title 新しいチャットのご紹介
+        .modal-body
+          / TODO replace to prod video
+          iframe allowfullscreen="" class="video" frameborder="0" src="https://www.youtube.com/embed/4G0AeUpgmJE" style="width:100%; height:300px;"
