Replace production video

--- a/app/views/chats/show.html.slim
+++ b/app/views/chats/show.html.slim
@@ -16,5 +16,4 @@ span(
             span aria-hidden="true"  &times;
           h4.modal-title 新しいチャットのご紹介
         .modal-body
-          / TODO replace to prod video
-          iframe allowfullscreen="" class="video" frameborder="0" src="https://www.youtube.com/embed/4G0AeUpgmJE" style="width:100%; height:300px;"
+          iframe src="https://www.youtube.com/embed/A0UIKr-dwcM" frameborder="0" allowfullscreen=true style="width:100%; height:300px;"
