Add chat widget section

--- a/app/views/chat_widgets/_embed_code.html.erb
+++ b/app/views/chat_widgets/_embed_code.html.erb
@@ -1,6 +1,4 @@
-<h1>Chat Widget</h1>
-
-<textarea class="form-control" rows="16" readonly onclick="this.select()">
+<textarea class="form-control" rows="14" readonly onclick="this.select()" id="chat-widget-embed-code">
 <%= %Q{<script type="text/javascript">
   (function() {
     var head = document.querySelector("head");
