--- a/app/assets/stylesheets/modules/chat/message.scss
+++ b/app/assets/stylesheets/modules/chat/message.scss
@@ -132,6 +132,18 @@
         margin: 0;
       }
     }
+
+    img {
+      max-width: 100%;
+    }
+  }
+
+  &__file {
+    padding: 8px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background-color: rgba(255,255,255,.5);
   }
 
   &__balloon-loader {
