--- a/app/views/question_answers/index.html.slim
+++ b/app/views/question_answers/index.html.slim
@@ -3,6 +3,7 @@ h1 Q&A管理
   .pull-left
     = form_tag bot_question_answers_path(@bot), method: :get, class: 'form-inline' do
       = collection_select :topic, :id, @topic_tags.all, :id, :name, { prompt: "トピックを選択してください", selected: @search_result }, class: 'form-control'
+      = text_field_tag :keyword, '', size: '30%', class: "search_question_answer form-control", placeholder: "検索ワードを入力してください", value: @keyword
       = space
       = submit_tag '検索', name: "search", class: "btn btn-default"
       - if params.dig(:topic, :id).present?
@@ -35,4 +36,4 @@ table.table.table-striped
         td nowrap="nowrap"
           = link_to t('helpers.link.edit'), edit_bot_question_answer_path(@bot, question_answer), class: "btn btn-default", data: { event_name: 'Open edit question answer', bot_id: @bot.id, bot_name: @bot.name }
           = link_to t('helpers.link.destroy'), bot_question_answer_path(@bot, question_answer), data: { confirm: 'Q&Aを削除します。よろしいですか。', method: :delete, event_name: 'Delete question answer', bot_id: @bot.id, bot_name: @bot.name }, class: "btn btn-danger"
-= paginate @question_answers
+/ = paginate @question_answers
