--- a/app/views/question_answers/index.html.slim
+++ b/app/views/question_answers/index.html.slim
@@ -3,7 +3,7 @@ h1 Q&A管理
   .pull-left
     = form_tag bot_question_answers_path(@bot), method: :get, class: 'form-inline' do
       = collection_select :topic, :id, @topic_tags.all, :id, :name, { prompt: "トピックを選択してください", selected: @search_result }, class: 'form-control'
-      = text_field_tag :keyword, '', size: '30%', class: "search_question_answer form-control", placeholder: "検索ワードを入力してください", value: @keyword
+      = text_field_tag :keyword, '', size: '30%', class: "search-question-answer form-control", placeholder: "検索ワードを入力してください", value: @keyword
       = space
       = submit_tag '検索', name: "search", class: "btn btn-default"
       - if params.dig(:topic, :id).present?
