--- a/app/views/question_answers/headless.html.slim
+++ b/app/views/question_answers/headless.html.slim
@@ -1,13 +1,14 @@
 h1 Q&A管理
 .clearfix
   .pull-left
-    = form_tag bot_question_answers_path(@bot), method: :get, class: 'form-inline' do
+    = form_tag headless_bot_question_answers_path(@bot), method: :get, class: 'form-inline' do
       = collection_select :topic, :id, @topic_tags.all, :id, :name, { prompt: "トピックを選択してください", selected: @search_result }, class: 'form-control'
+      = text_field_tag :keyword, '', size: '30%', class: "search-question-answer form-control", placeholder: "検索ワードを入力してください", value: @keyword
       = space
       = submit_tag '検索', name: "search", class: "btn btn-default"
       - if params.dig(:topic, :id).present?
         = space
-        = link_to '✕ トピックタグ検索を解除', bot_question_answers_path(@bot), class: 'btn btn-link'
+        = link_to '✕ トピックタグ検索を解除', headless_bot_question_answers_path(@bot), class: 'btn btn-link'
 
 table.table.table-striped
   thead
