--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,8 +26,14 @@ body {
 
 .container-main {
   position: relative;
-  margin-top: 20px;
   width: 100%;
+
+  @media (max-width: $screen-xs) {
+  }
+
+  @media (min-width: $screen-sm-min) {
+    padding: 60px 16px 0 216px !important;
+  }
 }
 
 .container {
@@ -195,6 +201,7 @@ body {
 }
 #sidebar-wrapper {
     position: fixed;
+    z-index: 100;
     height: 100%;
     padding: 0;
     overflow-y: auto;
