Fix container style

--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -1,5 +1,7 @@
+<% content_for :additional_container_main_class, "no-padding-left" %>
+
 <% if policy(:bot).index? %>
-  <div class="col-sm-8 col-sm-offset-2">
+  <div class="container">
   <h1>Bot一覧</h1>
 
   <div class="row">
