--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,11 +28,16 @@ body {
   position: relative;
   width: 100%;
 
-  @media (max-width: $screen-xs) {
+  @media (max-width: $screen-sm-min) {
+    padding-top: 60px !important;
   }
 
   @media (min-width: $screen-sm-min) {
     padding: 60px 16px 0 216px !important;
+
+    &.no-padding-left {
+      padding-left: 16px !important;
+    }
   }
 }
 
