--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <% if chat_page? %>
     <%= yield %>
   <% else %>
-    <div class="<%= root_container_class %>">
+    <div class="container container-main <%= content_for(:additional_container_main_class) %>">
       <%= render "shared/flash" %>
       <%= yield %>
     </div>
