Apply font-family

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,12 @@ body {
   //min-height: 2000px;
   // padding-top: 51px;
   min-height: 100%;
+  font-family: helvetica,
+               arial,
+               'hiragino kaku gothic pro',
+               meiryo,
+               'ms pgothic',
+               sans-serif;
 }
 
 .container-main {
