--- a/app/views/layouts/shared/ui/_header.html.erb
+++ b/app/views/layouts/shared/ui/_header.html.erb
@@ -25,6 +25,9 @@
             <% if policy(:bot).index? %>
               <li><%= link_to "Bot一覧", bots_path, data: { event_name: 'Open bot index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
             <% end %>
+            <% if current_user.staff? %>
+              <li><%= link_to "システム共通同義語一覧", admin_word_mappings_path, data: { event_name: 'Open admin word mapping index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
+            <% end %>
             <% if policy(:word_mapping).index? %>
               <li><%= link_to "同義語一覧", word_mappings_path, data: { event_name: 'Open word mapping index', bot_id: @bot.try(:id), bot_name: @bot.try(:name) } %></li>
             <% end %>
