--- a/app/views/word_mappings/_form.html.slim
+++ b/app/views/word_mappings/_form.html.slim
@@ -2,7 +2,7 @@
 
 .row
   .col-md-6.col-xs-12
-    = bootstrap_form_for @word_mapping, data: data do |f|
+    = bootstrap_form_for resource, data: data do |f|
       = render "shared/errors", object: @word_mapping
 
       = f.text_field :word
@@ -10,4 +10,3 @@
 
       .actions
         = f.submit class: 'btn btn-primary'
-        = link_to '戻る', word_mappings_path, class: 'btn btn-default', data: { event_name: 'Back to word mapping index', word_mapping_id: @word_mapping.id }
