--- a/app/views/layouts/shared/ui/_side_nav.html.slim
+++ b/app/views/layouts/shared/ui/_side_nav.html.slim
@@ -15,7 +15,7 @@
       = link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank', data: { event_name: 'Open new chat', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "対話履歴", bot_threads_path(@bot), class: 'list-group-item', data: { event_name: 'Open threads', bot_id: @bot.id, bot_name: @bot.name }
       /= link_to "育てる", new_bot_training_path(@bot), class: 'list-group-item', data: { event_name: 'Open training', bot_id: @bot.id, bot_name: @bot.name }
-      = link_to "タスク" + " #{not_compatible_tasks(@bot)}件", bot_tasks_path(@bot), class: 'list-group-item', data: { event_name: 'Open tasks', bot_id: @bot.id, bot_name: @bot.name }
+      = link_to "タスク" + " #{undigested_tasks_count(@bot)}件", bot_tasks_path(@bot), class: 'list-group-item', data: { event_name: 'Open tasks', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "学習データをエクスポート", bot_exports_path(@bot), class: 'list-group-item', data: { event_name: 'Open exporing', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "学習データをインポート", new_bot_imports_path(@bot), class: 'list-group-item', data: { event_name: 'Open importing', bot_id: @bot.id, bot_name: @bot.name }
       = link_to "Q&A管理", bot_question_answers_path(@bot), class: 'list-group-item', data: { event_name: 'Open qestion answers', bot_id: @bot.id, bot_name: @bot.name }
