--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,6 +45,11 @@ body {
       padding-left: 16px !important;
     }
   }
+
+  &--headless {
+    padding-top: 16px !important;
+    padding-left: 16px !important;
+  }
 }
 
 .container {
